--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,3 +97,21 @@
     background: rgba(255, 255, 255, 0.2);
     border-radius: 5px;
   }
+
+  .scrollbar-track-blue-lighter::-webkit-scrollbar-track {
+    --bg-opacity: 0.5;
+    background-color: #00000015;
+  }
+  .scrollbar-thumb-blue::-webkit-scrollbar-thumb {
+    --bg-opacity: 0.5;
+    background-color: #13131374;
+  }
+  .scrollbar-thumb-rounded::-webkit-scrollbar-thumb {
+    border-radius: 7px;
+  }
+  
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+    -ms-overflow-style: none; 
+    scrollbar-width: none;
+  }
